fix z-index

--- a/css/screen.css
+++ b/css/screen.css
@@ -153,7 +153,7 @@ section { position: relative; }
 
 .ui-loader { display: none; }
 
-.header { width: 100%; height: 70px; line-height: 70px; background: white; position: fixed; top: 0; left: 0; z-index: 2; }
+.header { width: 100%; height: 70px; line-height: 70px; background: white; position: fixed; top: 0; left: 0; z-index: 3; }
 .header .header__in { padding: 0 5%; *zoom: 1; }
 .header .header__in:before, .header .header__in:after { content: ""; display: table; }
 .header .header__in:after { clear: both; }
@@ -293,7 +293,7 @@ section { position: relative; }
 @media only screen and (max-width: 800px) { .services__cont .services__item p { font-size: 16px; } }
 .services__cont .services__item .i-service1 { margin-right: 10px; }
 
-.used-better { background: #29235c; color: white; min-height: 600px; }
+.used-better { background: #29235c; color: white; min-height: 600px; z-index: 2; }
 @media only screen and (max-width: 675px) { .used-better { height: auto !important; } }
 
 .benefits { width: 100%; }
@@ -349,6 +349,7 @@ section { position: relative; }
 
 .equally { margin: 0 10px; }
 
+.contact-us { z-index: 1; }
 @media only screen and (max-width: 675px) { .contact-us { min-height: 550px; } }
 .contact-us #map-canvas { width: 100%; }
 @media only screen and (max-width: 675px) { .contact-us #map-canvas { min-height: 550px; } }
