--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -42,7 +42,7 @@ section
 	position: fixed
 	top: 0
 	left: 0
-	z-index: 2
+	z-index: 3
 	.header__in
 		padding: 0 5%
 		+clr
@@ -386,6 +386,7 @@ section
 	background: #29235c
 	color: #FFF
 	min-height: 600px
+	z-index: 2
 	@include r(slide4)
 		height: auto !important 
 .benefits
@@ -489,6 +490,7 @@ section
 	margin: 0 10px
 ///////////////////////////////// * slide5 style * ////////////////////////////////
 .contact-us
+	z-index: 1 
 	@include r(slide4)
 		min-height: 550px 
 	#map-canvas
